test/corpus/structure.txt
==================
Preamble and section retain pair fields
==================
root = true
[*.c]
x =

---

(document
  (preamble
    (pair
      key: (key (key_text))
      operator: (assignment_operator)
      value: (value (value_text))
      (line_ending)))
  (section
    header: (section_header
      opening: (section_open)
      name: (pattern (wildcard) (glob_literal))
      closing: (section_close)
      (line_ending))
    (pair
      key: (key (key_text))
      operator: (assignment_operator)
      (line_ending))))

==================
Missing assignment at a line boundary preserves its key
==================
key

---

(document
  (preamble
    (pair
      key: (key (key_text))
      issue: (syntax_issue (invalid_syntax (missing_assignment_operator)))
      (line_ending))))

==================
Missing inner set close retains the outer section close
==================
[[!a]

---

(document
  (section
    header: (section_header
      opening: (section_open)
      name: (pattern
        (character_set
          opening: (set_open)
          negation: (set_negation)
          (set_text)
          issue: (syntax_issue (invalid_syntax (missing_set_close)))))
      closing: (section_close)
      (line_ending))))

==================
Nested alternatives and numeric ranges preserve ownership
==================
[{a,{1..3}}]

---

(document
  (section
    header: (section_header
      opening: (section_open)
      name: (pattern
        (alternation
          opening: (brace_open)
          (pattern (glob_literal))
          (alternative_separator)
          (pattern
            (numeric_range
              opening: (brace_open)
              lower: (integer)
              (range_separator)
              upper: (integer)
              closing: (brace_close)))
          closing: (brace_close)))
      closing: (section_close)
      (line_ending))))

==================
Comments and blank lines retain their original section
==================
# preamble

[a]
; section

[b]

---

(document
  (preamble
    (comment (comment_marker) (comment_text) (line_ending))
    (blank_line (line_ending)))
  (section
    header: (section_header
      opening: (section_open)
      name: (pattern (glob_literal))
      closing: (section_close)
      (line_ending))
    (comment (comment_marker) (comment_text) (line_ending))
    (blank_line (line_ending)))
  (section
    header: (section_header
      opening: (section_open)
      name: (pattern (glob_literal))
      closing: (section_close)
      (line_ending))))

==================
A lone backslash is an issue before the section close
==================
[a\]

---

(document
  (section
    header: (section_header
      opening: (section_open)
      name: (pattern
        (glob_literal)
        issue: (syntax_issue (invalid_syntax (incomplete_escape))))
      closing: (section_close)
      (line_ending))))

==================
An unfinished CR keeps the line-ending reason at EOF
==================
a=b
---

(document
  (preamble
    (pair
      key: (key (key_text))
      operator: (assignment_operator)
      value: (value (value_text))
      issue: (syntax_issue (incomplete_syntax (invalid_line_ending))))))
